[FEAT] 마이페이지 프로필

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,8 +1,13 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
 @import 'components/common/buttons';
 @import 'components/header/settingmenu';
+@import 'components/header/header';
+@import 'components/mypage//profile';
 @import 'base/font';
-@import 'layout/header';
 @import 'layout/frame';
+
+
+@import 'page/mypage'
