--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
+  box-shadow: 5px 5px 4px 0px rgba(0, 0, 0, 0.15);
 
   &_title {
     display: flex;
