--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'components/header/header';
 @import 'components/mypage/profile';
 @import 'components/mypage/friendlist';
+@import 'components/mypage/friendprofile';
 @import 'base/font';
 @import 'layout/frame';
 
