[FEAT] 마이페이지 피드/갤러리 탭 구현

--- a/frontend/src/scss/components/mypage/_profile.scss
+++ b/frontend/src/scss/components/mypage/_profile.scss
@@ -16,8 +16,11 @@
         margin: 0 auto;
         margin-top: 15px;
         position: relative;
+        
         img{
-            border-radius: 50%;
+            border-radius: 10px;
+            border: 10px solid #fff;
+            box-sizing: border-box;
         }
             
     }
