--- a/frontend/src/scss/components/mypage/_friendprofile.scss
+++ b/frontend/src/scss/components/mypage/_friendprofile.scss
@@ -11,6 +11,9 @@
         width: 60px;
         height: 60px;
         border-radius: 50%;
+        border: 3px solid #fff;
+        box-sizing: border-box;
+     
     }
     span{
         color: #FFF;
