--- a/frontend/src/scss/page/_mypage.scss
+++ b/frontend/src/scss/page/_mypage.scss
@@ -15,3 +15,76 @@
         box-sizing: border-box;
     }
 }
+
+.mypage_center{
+
+    .myfavorite{
+        width: 900px;
+        height: 300px;
+        margin-top: 60px;
+        position: relative;
+        margin: 0 auto;
+        margin-top: 60px;
+
+        .crown{
+            position: absolute;
+            right : -60px;
+            top : -60px;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+        }
+        .text{
+            position: absolute;
+            right : 5px;
+            bottom: 10%;
+            z-index: 100;
+            color: #FFF;
+
+            text-align: center;
+            font-family: "Black Han Sans";
+            font-size: 56px;
+            font-style: normal;
+            font-weight: 900;
+            line-height: 100%; /* 56px */
+            letter-spacing: 8.96px;
+            text-transform: uppercase;
+        }
+    }
+
+
+    .category{
+        display: flex;
+        flex-direction: row;
+        gap : 160px;
+        width: 100%;
+        padding-left: 270px;
+        margin-top: 60px;
+        border: 3px solid #F66;
+        position: relative;
+
+        .item{
+            display: flex;
+            width: 300px;
+            height: 80px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: #F66;
+            font-size: 44px;
+            cursor: pointer;
+        }
+
+        .indicator {
+            position: absolute;
+            width: 160px;
+            height: 10px;
+            border-radius: 10px 10px 0px 0px;
+            background: #F66;
+            bottom: 0;
+            transition: 0.3s linear;
+          }
+    }
+
+}
