[FEAT] 마이페이지 피드/갤러리 탭 구현

--- a/frontend/src/scss/page/_mypage.scss
+++ b/frontend/src/scss/page/_mypage.scss
@@ -61,7 +61,7 @@
         width: 100%;
         padding-left: 270px;
         margin-top: 60px;
-        border: 3px solid #F66;
+        border-bottom: 3px solid #F66;
         position: relative;
 
         .item{
