[FEAT] 검색창 컴포넌트 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -10,6 +10,6 @@
 @import 'components/mypage/friendprofile';
 @import 'base/font';
 @import 'layout/frame';
-
+@import 'components/common/search';
 
 @import 'page/mypage'
