--- a/frontend/src/scss/components/community/_communitymain.scss
+++ b/frontend/src/scss/components/community/_communitymain.scss
@@ -5,7 +5,7 @@
     &_title {
         margin-left: 400px;
         text-align: left;
-        font-size: 50pt;
+        font-size: 45pt;
     }
 
     &_favoritelist {
@@ -13,8 +13,9 @@
 
         &_container {
             display: flex;
+            justify-content: space-around;
             align-items: center;
-            width: 1300px;
+            width: 1500px;
             margin:20px auto;
         }
 
@@ -35,9 +36,10 @@
         text-align: center;
         color: #f66;
         font-size: 24pt;
+        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
         &_name {
-            margin-top: 5.5px;
+            margin-top: 10px;
         }
 
     }
