--- a/frontend/src/scss/components/common/_buttons.scss
+++ b/frontend/src/scss/components/common/_buttons.scss
@@ -1,5 +1,5 @@
 // 버튼관련 css
-.button {
+.button {  // 기본값
   display: flex;
   width: 126px;
   height: 63px;
@@ -10,4 +10,15 @@
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #ffffff;
   font-size: 24px;
+}
+
+.empty {
+  border: 3px solid #f66;
+  background: none;
+  color: #f66;
+}
+
+.square {
+  width: 72px;
+  height: 72px;
 }
