--- a/frontend/src/scss/components/community/_communitymain.scss
+++ b/frontend/src/scss/components/community/_communitymain.scss
@@ -2,8 +2,13 @@
     margin:20px auto;
     color: #f66;
 
+    &_contents {
+        display: flex;
+        width: 1200px;
+        margin: auto;
+    }
+
     &_title {
-        margin-left: 400px;
         text-align: left;
         font-size: 45pt;
     }
@@ -15,15 +20,14 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            width: 1500px;
+            width: 1400px;
             margin:20px auto;
         }
 
         &_contents {
-            display: flex;
-            justify-content: space-between;  
-            width: 1100px;
-            margin:20px auto;
+            display: flex;  
+            width: 1200px;
+            padding: 20px;
         }
     }
 
@@ -35,11 +39,12 @@
         border-radius: 23px;
         text-align: center;
         color: #f66;
-        font-size: 24pt;
+        font-size: 20pt;
+        margin: 0px 20px;
         box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
         &_name {
-            margin-top: 10px;
+            margin-top: 20px;
         }
 
     }
@@ -50,4 +55,9 @@
         border-radius: 20px 20px 0px 0px;
     }
 
+
+    &_searchbar {
+        display: flex;
+        margin-left: 20px;
+    }
 }
