[FEAT] 마이페이지 피드 컴포넌트 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'components/mypage/profile';
 @import 'components/mypage/friendlist';
 @import 'components/mypage/friendprofile';
+@import 'components/common//feed';
 @import 'base/font';
 @import 'layout/frame';
 @import 'components/common/search';
