[FIX] 이메일 저장 수정

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -9,13 +9,7 @@
 @import 'components/mypage/friendlist';
 @import 'components/mypage/friendprofile';
 @import 'base/font';
-<<<<<<< HEAD
-@import 'layout/header';
-@import 'layout/frame';
 @import 'page/login';
-=======
 @import 'layout/frame';
 @import 'components/common/search';
-
-@import 'page/mypage'
->>>>>>> c5f5e7f69d46d2e3eb491e5f7dc69c0ae2d31df5
+@import 'page/mypage';
