[STYLE] 세미콜론 누락

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -8,17 +8,10 @@
 @import 'components/mypage/profile';
 @import 'components/mypage/friendlist';
 @import 'components/mypage/friendprofile';
-@import 'components/common//feed';
+@import 'components/common/feed';
 @import 'base/font';
-<<<<<<< HEAD
 @import 'components/community/communitymain';
-@import 'layout/frame';
-@import 'components/common/search';
-
-@import 'page/mypage'
-=======
+@import 'page/mypage';
 @import 'page/login';
 @import 'layout/frame';
 @import 'components/common/search';
-@import 'page/mypage';
->>>>>>> feature/mypage
