[FEAT] 갤러리 컴포넌트

--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -48,5 +48,9 @@
         left : 1px;
         bottom :20px; 
     }
-
+    .comment{
+        position: absolute;
+        right: 1px;
+        bottom :20px;
+    }
 }
