--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -58,8 +58,8 @@
     margin-right: 30px;
     margin-left: auto;
     position: relative;
-    
-    div{
+
+    div {
       width: 60px;
       height: 60px;
       display: flex;
@@ -67,14 +67,12 @@
       align-items: center;
       cursor: pointer;
     }
-    
+
     .selected {
       width: 60px;
       height: 60px;
       border-radius: 10px 0px 10px 10px;
-      background: #FEA3A3;
+      background: #fea3a3;
     }
-
-    
   }
 }
