--- a/frontend/src/scss/components/header/_settingmenu.scss
+++ b/frontend/src/scss/components/header/_settingmenu.scss
@@ -1,25 +1,25 @@
-.settingmenu{
-    width: 330px;
-    height: 240px;
-    border-radius: 10px 0px 10px 10px;
-    background: #FEA3A3;
-    color: #FFF;
+.settingmenu {
+  width: 330px;
+  height: 240px;
+  border-radius: 10px 0px 10px 10px;
+  background: #fea3a3;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 23px;
+
+  position: absolute;
+  top: 80%;
+  left: 0;
+  z-index: 1000;
+  li {
+    width: 100%;
+    height: 40px;
     display: flex;
     flex-direction: column;
-    gap:30px;
-    padding-top: 23px;
-
-    position: absolute;
-    top : 80%;
-    left: 0;
-    z-index: 1000;
-    li{
-        width: 100%;
-        height: 40px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 24px;   
-    }
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+  }
 }
