--- a/frontend/src/scss/components/mypage/_friendprofile.scss
+++ b/frontend/src/scss/components/mypage/_friendprofile.scss
@@ -1,23 +1,22 @@
-.friendprofile{
-    display: flex;
-    width: 70px;
-    height: 75px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+.friendprofile {
+  display: flex;
+  width: 70px;
+  height: 75px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 
-    img{
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        border: 3px solid #fff;
-        box-sizing: border-box;
-     
-    }
-    span{
-        color: #FFF;
-        text-align: center;
-        font-size: 13px;
-    }
+  img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    box-sizing: border-box;
+  }
+  span {
+    color: #fff;
+    text-align: center;
+    font-size: 13px;
+  }
 }
