--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f66;
+  position: relative;
   img {
     width: 310px;
     height: 400px;
@@ -14,6 +15,18 @@
     display: flex;
     flex-direction: row;
   }
-  .lower {
+
+  .userinfo{
+    margin-bottom: 10px;
+    .dots {
+        position: absolute;
+        right: 0px;
+        bottom: 0px;
+      }
+      .heart {
+        position: absolute;
+        right: 40px;
+        bottom: 0px;
+      }
   }
 }
