feat : 헤더 메뉴 선택 크기 수정

--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -36,6 +36,9 @@
       align-items: center;
       position: relative;
     }
+    .active{
+      font-size: 32px;
+    }
   }
   .indicator {
     position: absolute;
