--- a/frontend/src/scss/components/header/_usermenu.scss
+++ b/frontend/src/scss/components/header/_usermenu.scss
@@ -1,8 +1,9 @@
-.settingmenu {
+.usermenu {
   width: 330px;
   height: 240px;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 10px 0px 10px 10px;
-  background: #fea3a3;
+  background: #FEA3A3;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -10,9 +11,10 @@
   padding-top: 23px;
 
   position: absolute;
-  top: 80%;
-  left: 0;
+  top: 68px;
+  left: 0px;
   z-index: 1000;
+
   li {
     width: 100%;
     height: 40px;
