--- a/frontend/src/scss/components/mypage/_friendprofile.scss
+++ b/frontend/src/scss/components/mypage/_friendprofile.scss
@@ -1,11 +1,10 @@
 .friendprofile {
   display: flex;
-  width: 70px;
-  height: 75px;
-  flex-direction: column;
-  justify-content: center;
+  width: 200px;
+  height: 60px;
+  flex-direction: row;
   align-items: center;
-  gap: 5px;
+  gap: 20px;
 
   img {
     width: 60px;
@@ -14,9 +13,10 @@
     border: 3px solid #fff;
     box-sizing: border-box;
   }
+  
   span {
     color: #fff;
     text-align: center;
-    font-size: 13px;
+    font-size: 30px;
   }
 }
