--- a/frontend/src/scss/page/_mypage.scss
+++ b/frontend/src/scss/page/_mypage.scss
@@ -74,7 +74,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      color: #FEA3A3;
+      color: #fea3a3;
       font-size: 44px;
       cursor: pointer;
     }
@@ -88,7 +88,7 @@
       bottom: 0;
       transition: 0.3s linear;
     }
-    .active{
+    .active {
       color: #f66;
     }
   }
