feat : 로그인 헤더 아이콘별 선택 기능 구현

--- a/frontend/src/scss/components/common/_gallery.scss
+++ b/frontend/src/scss/components/common/_gallery.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
   }
-  .title_box{
+  .title_box {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -23,23 +23,22 @@
     padding-left: 10px;
     margin-top: 10px;
     gap: 5px;
-    .title{
+    .title {
       font-size: 20px;
-      color: #FFF;
+      color: #fff;
       text-align: center;
     }
   }
-  .type{
+  .type {
     width: 24px;
     height: 10px;
-    background-color: #FFF;
+    background-color: #fff;
     color: #f66;
     font-size: 8px;
     text-align: center;
   }
 
-  &_userinfo{
-
+  &_userinfo {
     display: flex;
     width: 100%;
     height: 30px;
@@ -48,9 +47,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
     padding-left: 10px;
-    gap :5px;
+    gap: 5px;
     position: relative;
-      
   }
   &_heart {
     position: absolute;
@@ -63,9 +61,9 @@
     bottom: 0px;
   }
 
-  &_profile{
+  &_profile {
     display: flex;
     flex-direction: column;
-    color: #FFF;
+    color: #fff;
   }
 }
