--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -4,11 +4,12 @@
 
 @import 'components/common/buttons';
 @import 'components/header/usermenu';
+@import 'components/header/chatroom';
 @import 'components/header/header';
 @import 'components/mypage/profile';
 @import 'components/mypage/friendlist';
 @import 'components/mypage/friendprofile';
-@import 'components/common//feed';
+@import 'components/common/feed';
 @import 'components/common/search';
 @import 'components/common/gallery';
 
