--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -8,7 +8,6 @@
   position: relative;
   box-shadow: 5px 5px 4px 0px rgba(0, 0, 0, 0.15);
 
-  
   &_title {
     display: flex;
     width: 310px;
@@ -20,7 +19,7 @@
     font-size: 42px;
     margin-right: 182px;
   }
-  
+
   &_menu {
     display: flex;
     flex-direction: row;
@@ -63,7 +62,7 @@
     margin-left: auto;
     position: relative;
 
-    div {
+    &_div {
       width: 60px;
       height: 60px;
       display: flex;
@@ -72,13 +71,25 @@
       cursor: pointer;
     }
 
+    .chat {
+      border-radius: 10px 10px 0px 0px;
+      background: #FEA3A3;
+      box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .alarm {
+      border-radius: 10px 10px 0px 0px;
+      background: #FEA3A3;
+      box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .userlist{
+      border-radius: 10px 10px 0px 0px;
+      background: #FEA3A3;
+      box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    }
     .user {
-      width: 60px;
-      height: 60px;
       border-radius: 10px 10px 0px 0px;
       box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
       background: #fea3a3;
-      
     }
   }
 }
