--- a/frontend/src/scss/components/header/_usermenu.scss
+++ b/frontend/src/scss/components/header/_usermenu.scss
@@ -3,7 +3,7 @@
   height: 240px;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 10px 0px 10px 10px;
-  background: #FEA3A3;
+  background: #fea3a3;
   color: #fff;
   display: flex;
   flex-direction: column;
