style : 프레임 제거

--- a/frontend/src/scss/components/header/_chatroom.scss
+++ b/frontend/src/scss/components/header/_chatroom.scss
@@ -1,9 +1,9 @@
-.chatroom{
+.chatroom {
   width: 330px;
   height: 240px;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 0px 10px 10px 10px;
-  background: #FEA3A3;
+  background: #fea3a3;
   color: #fff;
   display: flex;
   flex-direction: column;
