--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -73,17 +73,17 @@
 
     .chat {
       border-radius: 10px 10px 0px 0px;
-      background: #FEA3A3;
+      background: #fea3a3;
       box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
     }
     .alarm {
       border-radius: 10px 10px 0px 0px;
-      background: #FEA3A3;
+      background: #fea3a3;
       box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
     }
-    .userlist{
+    .userlist {
       border-radius: 10px 10px 0px 0px;
-      background: #FEA3A3;
+      background: #fea3a3;
       box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
     }
     .user {
