--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -27,11 +27,7 @@
       right: 0px;
       top: 0px;
     }
-    .heart {
-      position: absolute;
-      right: 70px;
-      top: 0px;
-    }
+
   }
   .text {
     width: 1260px;
@@ -40,7 +36,7 @@
   }
   .tag {
     color: #000;
-    font-size: 14px;
+    font-size: 20px;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -48,9 +44,25 @@
     left: 1px;
     bottom: 20px;
   }
+
   .comment {
     position: absolute;
     right: 1px;
     bottom: 20px;
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
+  }
+  .heart {
+    position: absolute;
+    right: 110px;
+    bottom: 20px;
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
   }
 }
