--- a/frontend/src/scss/components/common/_feed.scss
+++ b/frontend/src/scss/components/common/_feed.scss
@@ -27,7 +27,6 @@
       right: 0px;
       top: 0px;
     }
-
   }
   .text {
     width: 1260px;
@@ -45,7 +44,7 @@
     bottom: 20px;
   }
 
-  .comment {
+  &_comment_box {
     position: absolute;
     right: 1px;
     bottom: 20px;
@@ -55,7 +54,10 @@
     align-items: center;
     font-size: 20px;
   }
-  .heart {
+  .hoverup:hover{
+    transform: scale(1.1);
+  }
+  &_heart_box {
     position: absolute;
     right: 110px;
     bottom: 20px;
