feat: 커뮤니티 상세 페이지/배너, 메뉴

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -20,4 +20,5 @@
 @import 'page/mypage';
 @import 'page/login';
 @import 'page/communitymain';
+@import 'page/communitydetail';
 @import 'layout/frame';
