--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -17,6 +17,7 @@
 
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
+@import 'components/chat/chatroom';
 
 @import 'base/font';
 @import 'page/mypage';
