feat : 채팅방, 채팅메세지 UI 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -18,7 +18,7 @@
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
 @import 'components/chat/chatroom';
-
+@import 'components/chat/message';
 @import 'base/font';
 @import 'page/mypage';
 @import 'page/login';
