--- a/frontend/src/scss/components/chat/_chatroom.scss
+++ b/frontend/src/scss/components/chat/_chatroom.scss
@@ -12,13 +12,36 @@
     top: 68px;
     left: 0px;
     z-index: 1000;
+    gap: 5px;
 
     .upper{
         width: 300px;
+        height: 50px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         font-size: 25px;
         margin: 0 auto;
+        border-bottom: 1px solid #fff;
+    }
+    .date{
+        width: 300px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center ;
+        margin: 0 auto;
+        gap: 15px;
+        font-size: 15px;
+        margin-top: 5px;
+    }
+    .message_send{
+        width: 300px;
+        border-radius: 10px;
+        background: #FFF;
+        color: #000;
+        font-size: 15px;
+        margin: 0 auto;
+        padding: 10px;
     }
 }
