feat: 커뮤니티 상세페이지/조건바(필터,검색) & 리스트

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import 'components/common/feed';
 @import 'components/common/search';
 @import 'components/common/gallery';
+@import 'components/common/gallerylist';
 @import 'components/community/communitycard';
 @import 'components/community/communityfavoritelist';
 @import 'components/community/communitylist';
