--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'components/common/search';
 @import 'components/common/gallery';
 @import 'components/common/gallerylist';
+@import 'components/common/dropdown';
 @import 'components/community/communitycard';
 @import 'components/community/communityfavoritelist';
 @import 'components/community/communitylist';
