feat : 채팅 API 연결

--- a/frontend/src/scss/components/chat/_chatroom.scss
+++ b/frontend/src/scss/components/chat/_chatroom.scss
@@ -23,6 +23,9 @@
     font-size: 25px;
     margin: 0 auto;
     border-bottom: 1px solid #fff;
+    .back{
+      cursor: pointer;
+    }
   }
   .date {
     width: 300px;
