--- a/frontend/src/scss/components/chat/_message.scss
+++ b/frontend/src/scss/components/chat/_message.scss
@@ -2,13 +2,20 @@
   width: 300px;
   margin: 0 auto;
   display: flex;
-  span {
+
+  .created{
+    font-size: 12px;
+    color: #fff;
+    margin-top: auto;
+    margin-left: auto;
+  }
+  .message{
     border-radius: 10px 10px 0px 10px;
     background: #d7d7d7;
     padding: 10px;
     font-size: 18px;
     color: #000;
-    margin-left: auto;
+    margin-left: 10px;
   }
 }
 
