--- a/frontend/src/scss/components/chat/_chatroom.scss
+++ b/frontend/src/scss/components/chat/_chatroom.scss
@@ -38,6 +38,13 @@
     font-size: 15px;
     margin-top: 5px;
   }
+  .messagelist{
+    display: flex;
+    flex-direction: column;
+    gap : 5px;
+    height: 337px;
+    overflow-y: scroll;
+  }
   .message_send {
     width: 300px;
     border-radius: 10px;
