feat: 최애자랑 페이지 생성

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -23,4 +23,5 @@
 @import 'page/login';
 @import 'page/communitymain';
 @import 'page/communitydetail';
+@import 'page/favorite';
 @import 'layout/frame';
