--- a/frontend/src/scss/components/chat/_message.scss
+++ b/frontend/src/scss/components/chat/_message.scss
@@ -15,7 +15,10 @@
     padding: 10px;
     font-size: 18px;
     color: #000;
+    max-width: 200px;
     margin-left: 10px;
+    box-sizing: border-box;
+    word-wrap: break-word;
   }
 }
 
@@ -23,12 +26,22 @@
   width: 300px;
   margin: 0 auto;
   display: flex;
-  span {
+  .created {
+    font-size: 12px;
+    color: #fff;
+    margin-top: auto;
+    margin-right: auto;
+  }
+  .message {
     border-radius: 10px 10px 10px 0px;
-    background: #fff;
+    background: #d7d7d7;
     padding: 10px;
     font-size: 18px;
     color: #000;
+    max-width: 200px;
+    margin-left: 10px;
+    box-sizing: border-box;
+    word-wrap: break-word;
   }
 }
 
