--- a/frontend/src/scss/page/_communitydetail.scss
+++ b/frontend/src/scss/page/_communitydetail.scss
@@ -1,44 +1,117 @@
 .communitydetail {
+  position: relative;
+
+  .write-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+
+    width: 60px;
+    height: 60px;
+
+    cursor: pointer;
+  }
+
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    // top: 200px;
+    // left: 100px;
+    width: 950px;
+    height: 609px;
+    border: 5px solid #f66;
+    position: relative;
+  }
+
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
+
+  .tabs {
+    display: flex;
+  }
+
+  .tab {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    cursor: pointer;
+  }
+
+  .tab.active {
+    background-color: #f66;
+    color: white;
+  }
+
+  .modal-body {
+    padding: 20px 0;
+  }
+
   .banner {
-      position: relative;
+    position: relative;
+    width: 100%;
+    height: 500px;
+
+    &_img {
+      position: absolute;
       width: 100%;
-      height: 500px;
+      height: 100%;
+    }
 
-      &_img {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-      }
+    &_name {
+      position: absolute;
+      bottom: 100px;
+      right: 320px;
+      color: white;
+      text-align: right;
+      font-size: 84px;
+      // font-family: ;
+    }
 
-      &_name {
-          position: absolute;
-          bottom: 100px;
-          right: 320px;
-          color: white;
-          text-align: right;
-          font-size: 84px;
-          // font-family: ;
-      }
+    &_favoritenum {
+      position: absolute;
+      bottom: 20px;
+      right: 320px;
+      color: white;
+      text-align: right;
+      font-size: 54px;
+    }
 
-      &_favoritenum {
-          position: absolute;
-          bottom: 20px;
-          right: 320px;
-          color: white;
-          text-align: right;
-          font-size: 54px;
-      }
+    &_star {
+      position: absolute;
+      top: 40px;
+      right: 320px;
+      cursor: pointer;
 
-      &_star {
-          position: absolute;
-          top: 40px;
-          right: 320px;
-          cursor: pointer;
-          
-          .hoverup:hover {
-            transform: scale(1.1);
-          }
+      .hoverup:hover {
+        transform: scale(1.1);
       }
+    }
   }
 
   &_container {
@@ -49,43 +122,43 @@
   }
 
   .category {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 160px;
+    width: 100%;
+    margin-top: 60px;
+    border-bottom: 3px solid #f66;
+    position: relative;
+
+    .item {
       display: flex;
-      flex-direction: row;
+      width: 300px;
+      height: 80px;
+      flex-direction: column;
       justify-content: center;
-      gap: 160px;
-      width: 100%;
-      margin-top: 60px;
-      border-bottom: 3px solid #f66;
-      position: relative;
-  
-      .item {
-        display: flex;
-        width: 300px;
-        height: 80px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: #fea3a3;
-        font-size: 44px;
-        cursor: pointer;
-      }
-  
-      .indicator {
-        position: absolute;
-        width: 160px;
-        height: 10px;
-        border-radius: 10px 10px 0px 0px;
-        background: #f66;
-        bottom: 0;
-        transition: 0.3s linear;
-      }
-      .active {
-        color: #f66;
-      }
+      align-items: center;
+      color: #fea3a3;
+      font-size: 44px;
+      cursor: pointer;
+    }
+
+    .indicator {
+      position: absolute;
+      width: 160px;
+      height: 10px;
+      border-radius: 10px 10px 0px 0px;
+      background: #f66;
+      bottom: 0;
+      transition: 0.3s linear;
+    }
+    .active {
+      color: #f66;
+    }
   }
-  
+
   .conditionbar {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     padding: 20px;
 
@@ -103,11 +176,10 @@
     .search {
       display: flex;
       align-items: center;
-  
+
       input {
         border: 2px solid #f66;
       }
-  }
-
+    }
   }
 }
