feat: 최애자랑/베스트슬라이드 구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/community/communitycard';
 @import 'components/community/communityfavoritelist';
 @import 'components/community/communitylist';
+@import 'components/favorite/bestphotoslide';
 
 @import 'base/font';
 @import 'page/mypage';
