--- a/frontend/src/scss/components/favorite/bestphotoslide.scss
+++ b/frontend/src/scss/components/favorite/bestphotoslide.scss
@@ -41,13 +41,22 @@
             box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
             object-fit: cover;
         }
+
+        &_label {
+            display: flex;
+            width: 400px;
+            justify-content: center;
+            color: white;
+            font-size: 24px;
+            padding-left: 20px;
+            padding-right: 20px;
+
+            .separator {
+                margin: 0 20px;
+            }
+        }
     }
 
-    &_idolname {
-        color: white;
-        font-size: 24px;
-        text-align: center;
-    }
 
     @keyframes slide {
         0% {
