--- a/frontend/src/scss/page/_communitydetail.scss
+++ b/frontend/src/scss/page/_communitydetail.scss
@@ -26,10 +26,7 @@
 
   .modal-content {
     background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    // top: 200px;
-    // left: 100px;
+    border-radius: 20px 20px 0px 0px;
     width: 950px;
     height: 609px;
     border: 5px solid #f66;
@@ -37,6 +34,7 @@
   }
 
   .close {
+    color: white;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -46,11 +44,23 @@
 
   .modal-header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+    flex-direction: row;
+    justify-content: flex-start;
+    background: #f66;
+
+    font-size: 23px;
+    letter-spacing: 2.3px;
+    font-weight: 400;
+    line-height: 100%; /* 23px */
+
+    .modal-header-title {
+      width: 90px;
+      height: 44px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
   }
 
   .tabs {
@@ -58,18 +68,22 @@
   }
 
   .tab {
-    padding: 10px 20px;
-    border: 1px solid #ccc;
+    width: 90px;
+    height: 44px;
+    color: #fff;
     cursor: pointer;
   }
 
   .tab.active {
-    background-color: #f66;
-    color: white;
+    border-radius: 20px 20px 0px 0px;
+    background: #fff;
+    color: #f66;
   }
 
   .modal-body {
-    padding: 20px 0;
+    padding-left: 20 0px;
+    padding-right: 20 0px;
+    padding-top: 20 0px;
   }
 
   .banner {
