--- a/frontend/src/scss/components/chat/_chatroom.scss
+++ b/frontend/src/scss/components/chat/_chatroom.scss
@@ -43,7 +43,7 @@
     flex-direction: column;
     gap: 5px;
     height: 337px;
-    overflow-y: scroll;
+    overflow-y: scroll
   }
   .message_send {
     width: 300px;
@@ -54,4 +54,20 @@
     margin: 0 auto;
     padding: 10px;
   }
+}
+
+
+.messagelist::-webkit-scrollbar {
+  width: 12px; /* 스크롤바의 너비 */
+}
+
+.messagelist::-webkit-scrollbar-thumb {
+  background-color: #fff; /* 스크롤바의 색상 */
+  border-radius: 6px; /* 스크롤바의 모서리 둥글게 */
+  border: 3px solid #fea3a3; /* 스크롤바와 컨테이너 사이의 여백 */
+}
+
+.messagelist::-webkit-scrollbar-track {
+  background-color: #fea3a3; /* 스크롤바 배경 색상 */
+  border-radius: 6px; /* 스크롤바 배경의 모서리 둥글게 */
 }
