--- a/frontend/src/scss/components/chat/_chatroomlistitem.scss
+++ b/frontend/src/scss/components/chat/_chatroomlistitem.scss
@@ -9,6 +9,7 @@
   align-items: center;
   margin: 0 auto;
   padding: 10px;
+
   &:hover {
     transform: scale(1.03);
   }
@@ -18,6 +19,14 @@
     font-size: 20px;
     gap: 5px;
     margin-left: 5px;
+    .lastchat {
+      font-size: 18px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1; /* 두 줄 표시 */
+      -webkit-box-orient: vertical;
+    }
   }
   img {
     margin-left: 5px;
