--- a/frontend/src/scss/components/chat/_message.scss
+++ b/frontend/src/scss/components/chat/_message.scss
@@ -36,7 +36,7 @@
   }
   .message {
     border-radius: 10px 10px 10px 0px;
-    background: #FFF;
+    background: #fff;
     padding: 10px;
     font-size: 18px;
     color: #000;
