fix: 테두리 선이 헤더에 삐져나오는 것 수정

--- a/frontend/src/scss/page/_communitydetail.scss
+++ b/frontend/src/scss/page/_communitydetail.scss
@@ -47,6 +47,7 @@
     flex-direction: row;
     justify-content: flex-start;
     background: #f66;
+    border-radius: 10px 10px 0px 0px;
 
     font-size: 23px;
     letter-spacing: 2.3px;
