--- a/frontend/src/scss/components/community/_postfeed.scss
+++ b/frontend/src/scss/components/community/_postfeed.scss
@@ -3,6 +3,8 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
+  padding-bottom: 80px; /* submit button 공간 확보 */
+  position: relative;
 
   .form-group {
     margin-bottom: 20px;
@@ -146,59 +148,84 @@
 
   .tags-wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-  }
-
-  .tags {
-    display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    flex: 1;
-    .tag {
-      background: #e0e0e0;
+    max-width: calc(100% - 150px); /* 태그 영역 제한 */
+
+    .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      flex: 1;
+
+      .tag {
+        background-color: #f66;
+        color: #fff;
+        font-weight: 400;
+        line-height: 100%; /* 14px */
+        letter-spacing: 1.4px;
+        padding: 5px 10px;
+        border-radius: 1000px;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        .removetag-button {
+          cursor: pointer;
+        }
+      }
+    }
+
+    .addtag-container {
+      background-color: #f66;
+      width: auto;
+      height: auto;
       padding: 5px 10px;
-      border-radius: 5px;
+      border-radius: 1000px;
       display: flex;
       align-items: center;
       gap: 5px;
-      span {
+
+      input {
+        border: none;
+        outline: none;
+        background: none;
+        font-size: 14px;
+        color: #fff;
+        min-width: 50px;
+        width: auto;
+        max-width: 100px;
+      }
+
+      input::placeholder {
+        color: #bbb;
+      }
+
+      .addtag-button {
+        width: 16px;
+        height: 16px;
         cursor: pointer;
       }
-    }
-    input {
-      border: 1px solid #ccc;
-      padding: 5px;
-      border-radius: 5px;
-      width: 100px;
-    }
-    button {
-      background: #f66;
-      color: white;
-      border: none;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
     }
   }
 
   .submit-button {
+    position: absolute; /* 모달 창의 우측 하단에 고정 */
+    bottom: 20px;
+    right: 20px;
     border-radius: 15px;
     background: #f66;
     width: 120px;
     height: 50px;
-
-    float: right;
-
     color: #fff;
-
     text-align: center;
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 32px */
     letter-spacing: 3.2px;
-
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -229,8 +256,6 @@
         position: relative;
         border-radius: 15px;
         border: 3px solid #f66;
-        // padding-left: 10px;
-        // padding-top: 10px;
         padding-bottom: 5px;
         box-sizing: border-box;
         overflow: hidden;
