--- a/frontend/src/scss/page/_communitydetail.scss
+++ b/frontend/src/scss/page/_communitydetail.scss
@@ -31,6 +31,8 @@
     height: 609px;
     border: 5px solid #f66;
     position: relative;
+    display: flex;
+    flex-direction: column;
   }
 
   .close {
@@ -82,9 +84,29 @@
   }
 
   .modal-body {
-    padding-left: 20 0px;
-    padding-right: 20 0px;
-    padding-top: 20 0px;
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto; /* 세로 스크롤 추가 */
+  }
+
+  .modal-body::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  .modal-body::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+  }
+
+  .modal-body::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+  .submit-container {
+    position: absolute; /* 모달의 우측 하단에 고정 */
+    bottom: 20px;
+    right: 20px;
+    z-index: 10; /* 제출 버튼이 항상 위에 표시되도록 */
   }
 
   .banner {
