feat: userProfile 컴포넌트, 최애자랑 페이지/리스트 구현, 최애자랑 슬라이스 간단구현

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/community/communityfavoritelist';
 @import 'components/community/communitylist';
 @import 'components/favorite/bestphotoslide';
+@import 'components/favorite/favoriteranklist';
 
 @import 'components/chat/chatlayout';
 @import 'components/chat/chatroomlistitem';
