--- a/frontend/src/scss/components/community/_postfeed.scss
+++ b/frontend/src/scss/components/community/_postfeed.scss
@@ -3,7 +3,7 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
-  padding-bottom: 80px; /* submit button 공간 확보 */
+  // padding-bottom: 20px;
   position: relative;
 
   .form-group {
@@ -209,26 +209,22 @@
         cursor: pointer;
       }
     }
-  }
-
-  .submit-button {
-    position: absolute; /* 모달 창의 우측 하단에 고정 */
-    bottom: 20px;
-    right: 20px;
-    border-radius: 15px;
-    background: #f66;
-    width: 120px;
-    height: 50px;
-    color: #fff;
-    text-align: center;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%; /* 32px */
-    letter-spacing: 3.2px;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
+    .submit-button {
+      border-radius: 15px;
+      background: #f66;
+      width: 120px;
+      height: 50px;
+      color: #fff;
+      text-align: center;
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%; /* 32px */
+      letter-spacing: 3.2px;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+    }
   }
 }
 
