--- a/frontend/src/scss/components/common/_dropdown.scss
+++ b/frontend/src/scss/components/common/_dropdown.scss
@@ -22,11 +22,11 @@
     
     &_list {
         position: absolute;
-        width: 100%;
         max-height: 200px;
         overflow-y: auto;
         background-color: #fff;
         z-index: 1;
+        min-width: 100%;
 
         &_item {
             padding: 10px;
