--- a/frontend/src/scss/components/community/_postfeed.scss
+++ b/frontend/src/scss/components/community/_postfeed.scss
@@ -200,7 +200,7 @@
       }
 
       input::placeholder {
-        color: #bbb;
+        color: #e3e3e3;
       }
 
       .addtag-button {
@@ -231,6 +231,10 @@
 
 .gallery-form {
   .form-group {
+    .textarea-wrapper {
+      margin-bottom: 60px;
+    }
+
     .select-title-group {
       display: flex;
       flex-direction: row;
@@ -285,5 +289,22 @@
         }
       }
     }
+  }
+
+  .submit-button {
+    border-radius: 15px;
+    background: #f66;
+    width: 120px;
+    height: 50px;
+    color: #fff;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 32px */
+    letter-spacing: 3.2px;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
   }
 }
