feat : 알림 레이아웃

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -21,8 +21,9 @@
 @import 'components/chat/chatroom';
 @import 'components/chat/message';
 @import 'components/signup/termsmodal';
-
 @import 'components/searchuser/searchuser';
+
+@import 'components/alarm/alarmlayout';
 @import 'base/font';
 @import 'page/mypage';
 @import 'page/login';
