feat : 실시간 알림추가/ 읽기 구현

--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -81,6 +81,9 @@
       background: #fea3a3;
       box-shadow: 4px 1px 4px 0px rgba(0, 0, 0, 0.25);
     }
+    .count{
+      position: relative;
+    }
     .userlist {
       border-radius: 10px 10px 0px 0px;
       background: #fea3a3;
