--- a/frontend/src/scss/components/alarm/_alarmlayout.scss
+++ b/frontend/src/scss/components/alarm/_alarmlayout.scss
@@ -12,4 +12,54 @@
   top: 68px;
   left: 0px;
   z-index: 1000;
+
+  .title {
+    width: 300px;
+    height: 50px;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 30px;
+    border-bottom: 1px solid #fff;
+  }
+  
+}
+
+.alarmlistitem{
+  width: 95%;
+  height: 90px;
+  margin: 0 auto;
+  border-bottom: 1px solid #fff;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+  padding: 10px;
+
+  &:hover {
+    transform: scale(1.03);
+  }
+
+  .cont{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    gap: 5px;
+    margin-left: 5px;
+    .content{
+      font-size: 18px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1; /* 두 줄 표시 */
+      -webkit-box-orient: vertical;
+    }
+  }
+  .lastchattime {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 15px;
+    color: #fff;
+  }
 }
