--- a/frontend/src/scss/components/favorite/_bestphotoslide.scss
+++ b/frontend/src/scss/components/favorite/_bestphotoslide.scss
@@ -55,6 +55,8 @@
                 margin: 0 20px;
             }
         }
+
+        
     }
 
 
@@ -65,6 +67,13 @@
         100% {
           transform: translateX(-50%);
         }
-      }
+    }
+
+    &_nocard {
+        font-size: 32px;
+        text-align: center;
+        color: white;
+        margin: 150px auto;
+    }
 }
 
