feat: 피드 상세 모달

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -31,3 +31,4 @@
 @import 'page/communitydetail';
 @import 'layout/frame';
 @import 'components/community/postfeed';
+@import 'components/community/feeddetailmodal';
