--- a/frontend/src/scss/components/header/_header.scss
+++ b/frontend/src/scss/components/header/_header.scss
@@ -1,6 +1,6 @@
 // 해더관련 css
 .header {
-  width: 1920px;
+  width: 100%;
   height: 80px;
   background-color: #f66;
   display: flex;
@@ -17,7 +17,6 @@
     color: #fff;
     text-align: center;
     font-size: 42px;
-    margin-right: 182px;
   }
 
   &_menu {
@@ -29,7 +28,6 @@
     a {
       text-decoration: none;
       display: flex;
-      width: 200px;
       height: 80px;
       flex-direction: column;
       justify-content: center;
@@ -51,7 +49,6 @@
   }
 
   &_icon {
-    width: 330px;
     height: 80px;
     display: flex;
     flex-direction: row;
